# mokojeweled

./: .gitignore  ACKNOWLEDGEMENTS  ChangeLog  Makefile.am  README  TODO  autogen.sh  build  configure.ac  main.c  mokojeweled.spec.in  mokojeweled_git.bb  run.sh  test  test.edc  test_mainwin.c
arm/: mokojeweled  test.edj
data/: Makefile.am  mokojeweled.desktop
data/themes/: Makefile.am
data/themes/gweled/: Makefile.am  theme.edc
po/: ChangeLog  LINGUAS  Makevars  POTFILES.in  it_IT.po  mokojeweled.pot  mokojeweled.pt_PT  pt_PT.po
src/: Makefile.am  board.c  board.h  debug  globals.h  gui.c  gui.h  main.c  menu.c  menu.h  mokoinwin.c  mokowin.c  test_mainwin.c  theme.c  theme.h
