SUBDIRS = src po data

ACLOCAL_AMFLAGS = -I m4

MAINTAINERCLEANFILES = aclocal.m4 compile config.guess config.sub \
                       configure depcomp install-sh  \
                       Makefile.in missing ltmain.sh \
                       mkinstalldirs config.h.in config.h.in~ INSTALL \
                       m4/intltool.m4 m4/libtool.m4 m4/lt~obsolete.m4 \
                       m4/ltoptions.m4  m4/ltsugar.m4  m4/ltversion.m4

#maintainer-clean-local:
#	$(RM) -R m4

EXTRA_DIST = \
	mokojeweled.spec
