SUBDIRS = src po data

ACLOCAL_AMFLAGS = -I m4

MAINTAINERCLEANFILES = \
	aclocal.m4 compile config.guess config.sub \
	configure depcomp install-sh  \
	Makefile.in missing ltmain.sh \
	mkinstalldirs config.h.in config.h.in~ INSTALL \
	m4/intltool.m4 m4/libtool.m4 m4/lt~obsolete.m4 \
	m4/ltoptions.m4  m4/ltsugar.m4  m4/ltversion.m4 \
	m4/codeset.m4 m4/gettext.m4 m4/glibc21.m4 m4/iconv.m4 \
	m4/intdiv0.m4 m4/inttypes-pri.m4 m4/inttypes.m4 m4/inttypes_h.m4 \
	m4/isc-posix.m4 m4/lcmessage.m4 m4/lib-ld.m4 m4/lib-link.m4 \
	m4/lib-prefix.m4 m4/nls.m4 m4/po.m4 m4/progtest.m4 m4/stdint_h.m4 \
	m4/uintmax_t.m4 m4/ulonglong.m4 \
	po/Makefile.in.in \
	po/Makevars.template \
	po/Rules-quot \
	po/boldquot.sed \
	po/en@boldquot.header \
	po/en@quot.header \
	po/insert-header.sin \
	po/mokojeweled.pot \
	po/quot.sed \
	po/remove-potcdate.sin

EXTRA_DIST = \
	mokojeweled.spec
